prebuild_test.log
Starting build scripts from main project
/Users/mqp/Desktop/lusc/build-scripts/build_backend.sh /Users/mqp/Desktop/lusc/luscbackend -DBUILD_TEST=OFF
Going into directory /Users/mqp/Desktop/lusc/luscbackend
-- Found pybind11: /opt/homebrew/include (found version "2.9.2")
-- Configuring done
-- Generating done
-- Build files have been written to: /Users/mqp/Desktop/lusc/luscbackend/build
Consolidate compiler generated dependencies of target luscbackend
[ 16%] Building CXX object CMakeFiles/luscbackend.dir/cppmain.cpp.o
clang: warning: -ldl: 'linker' input unused [-Wunused-command-line-argument]
clang: warning: -framework CoreFoundation: 'linker' input unused [-Wunused-command-line-argument]
clang: warning: argument unused during compilation: '-L/opt/homebrew/opt/python@3.10/Frameworks/Python.framework/Versions/3.10/lib/python3.10/config-3.10-darwin' [-Wunused-command-line-argument]
/Users/mqp/Desktop/lusc/luscbackend/cppmain.cpp:173:17: error: no member named 'path' in namespace 'std::filesystem'; did you mean 'puts'?
    auto path = std::filesystem::path(argv[1]);
                ^~~~~~~~~~~~~~~~~~~~~
                puts
/Library/Developer/CommandLineTools/SDKs/MacOSX12.sdk/usr/include/stdio.h:173:6: note: 'puts' declared here
int      puts(const char *);
         ^
/Users/mqp/Desktop/lusc/luscbackend/cppmain.cpp:174:13: error: member reference base type 'int' is not a structure or union
    if (path.filename().generic_string() != "api.py") {
        ~~~~^~~~~~~~~
/Users/mqp/Desktop/lusc/luscbackend/cppmain.cpp:178:27: error: member reference base type 'int' is not a structure or union
    std::ifstream api(path.c_str());
                      ~~~~^~~~~~
/Users/mqp/Desktop/lusc/luscbackend/cppmain.cpp:178:19: error: implicit instantiation of undefined template 'std::basic_ifstream<char>'
    std::ifstream api(path.c_str());
                  ^
/Library/Developer/CommandLineTools/SDKs/MacOSX12.sdk/usr/include/c++/v1/iosfwd:149:32: note: template is declared here
    class _LIBCPP_TEMPLATE_VIS basic_ifstream;
                               ^
4 errors generated.
make[2]: *** [CMakeFiles/luscbackend.dir/cppmain.cpp.o] Error 1
make[1]: *** [CMakeFiles/luscbackend.dir/all] Error 2
make: *** [all] Error 2
cp: libluscbackend.a: No such file or directory
